Fixed text size, got rid of h scrollbar on Players

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,7 @@ html {
 }
 
 body {
-  font-family: Calibri, Arial, sans-serif !important;
-  font-size: 10pt;
+  font-family: Arial, sans-serif !important;
 }
 
 a {
@@ -43,6 +42,7 @@ button:disabled {
 
 .griddle {
     text-align: center;
+    font-size: 10pt;
     th {
         text-align: center;
     }
